chore: bump version to 1.4.1 and update changelog
